syntax = "proto3";

package giftduels.gift.v1;

import "giftduels/shared/v1/common.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/peterparker2005/giftduels/packages/protobuf-go/gen/giftduels/gift/v1;giftv1";

message Gift {
  // Immutable. Assigned once when the Gift enters the system.
  shared.v1.GiftId gift_id = 1;

  // Gift ID from Telegram gift response
  shared.v1.GiftTelegramId telegram_gift_id = 2;

  // Date when the gift was created in Telegram
  google.protobuf.Timestamp date = 3;

  shared.v1.TelegramUserId owner_telegram_id = 4;

  // Used when gift is upgraded to a collectible
  int32 collectible_id = 5;
  int32 telegram_message_id = 6; // Used to transfer gift

  // Gift metadata
  string title = 7;
  string slug = 8;

  // Gift attributes
  GiftAttributeBackdrop backdrop = 9;
  GiftAttributeModel model = 10;
  GiftAttributeSymbol symbol = 11;

  // Pricing information
  shared.v1.TonAmount price = 12;

  // Gift status tracking
  GiftStatus status = 13;
  google.protobuf.Timestamp withdrawn_at = 14;

  // metadata for game
  optional shared.v1.DuelId related_duel_id = 15;
}

message GiftView {
  shared.v1.GiftId gift_id = 1;
  shared.v1.GiftTelegramId telegram_gift_id = 2;
  string title = 3;
  string slug = 4;
  shared.v1.TonAmount price = 5;
  int32 collectible_id = 6;
  GiftStatus status = 7;
  google.protobuf.Timestamp withdrawn_at = 8;
  repeated GiftAttribute attributes = 9;

  // metadata for game
  optional shared.v1.DuelId related_duel_id = 10;
}

message GiftAttribute {
  GiftAttributeType type = 1;
  string name = 2;
  int32 rarity_per_mille = 3;
}

enum GiftAttributeType {
  GIFT_ATTRIBUTE_TYPE_UNSPECIFIED = 0;
  GIFT_ATTRIBUTE_TYPE_BACKDROP = 1;
  GIFT_ATTRIBUTE_TYPE_MODEL = 2;
  GIFT_ATTRIBUTE_TYPE_SYMBOL = 3;
}

message GiftAttributeBackdrop {
  string name = 1;
  int32 rarity_per_mille = 2;
  string center_color = 3;
  string edge_color = 4;
  string pattern_color = 5;
  string text_color = 6;
}

message GiftAttributeModel {
  string name = 1;
  int32 rarity_per_mille = 2;
}

message GiftAttributeSymbol {
  string name = 1;
  int32 rarity_per_mille = 2;
}

enum GiftStatus {
  GIFT_STATUS_UNSPECIFIED = 0;
  GIFT_STATUS_OWNED = 1;
  GIFT_STATUS_WITHDRAW_PENDING = 2;
  GIFT_STATUS_WITHDRAWN = 3;
  GIFT_STATUS_IN_GAME = 4;
  GIFT_STATUS_LOST = 5;
}

message GiftEvent {
  string event_id = 1; // Event UUID
  shared.v1.GiftId gift_id = 2;
  shared.v1.TelegramUserId from_telegram_user_id = 3;
  shared.v1.TelegramUserId to_telegram_user_id = 4;
  google.protobuf.Timestamp occurred_at = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;

  // context: transfer could be related to a game
  string related_game_id = 8;
  shared.v1.GameMode game_mode = 9;

  // Transfer metadata
  GiftEventAction action = 10;
  string description = 11;
}

enum GiftEventAction {
  GIFT_EVENT_ACTION_UNSPECIFIED = 0;
  GIFT_EVENT_ACTION_DEPOSIT = 1; // Deposit from Telegram to system
  GIFT_EVENT_ACTION_PURCHASE = 2; // Purchase with Stars
  GIFT_EVENT_ACTION_WITHDRAW = 3; // Withdraw from system to Telegram
  GIFT_EVENT_ACTION_GAME_WIN = 4; // Won in game
  GIFT_EVENT_ACTION_GAME_LOSE = 5; // Lost in game
  GIFT_EVENT_ACTION_STAKE = 6; // Stake for game
  GIFT_EVENT_ACTION_REFUND = 7; // Refund from game
}
